name:                bindings-termbox
version:             0.1.0.0
author:              Nick Partridge
maintainer:          Nick Partridge <nkpart@gmail.com>
-- copyright:
license: TODO
license-file: LICENSE
category: FFI
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:
    src
  extensions:
    ForeignFunctionInterface
  -- includes:
  --   termbox.h
  extra-libraries:
    termbox
  exposed-modules:
    Bindings.Termbox
  -- other-modules:
  build-depends:
                base >=4.7 && <4.8
              , bindings-DSL >= 1.0.22 && < 1.1

  default-language:    Haskell2010

executable termbox-example
  main-is:
    Example.hs
  ghc-options:
    -threaded
  default-language:
                   Haskell2010
  build-depends:
                base >=4.7 && <4.8
              , bindings-termbox
              , lens
              , containers
              , mtl
              , transformers
