name:                bindings-termbox

synopsis:
  Low level bindings to the termbox library
description:
            Low level bindings to the termbox library.
            .
            The version of this library is tied to the version of termbox it is built for.
            .
            Version 1.1.0 of termbox is supported by 1.1.0.x of bindings-termbox.
version:             1.1.0.0
author:              Nick Partridge
maintainer:          Nick Partridge <nkpart@gmail.com>
license: Apache-2.0
license-file: LICENCE
category: FFI
build-type:          Simple
cabal-version:       >=1.10
source-repository head
  type: git
  location: https://github.com/nkpart/bindings-termbox

library
  hs-source-dirs:
    src
  default-extensions:
    ForeignFunctionInterface
    InterruptibleFFI
  extra-libraries:
    termbox
  exposed-modules:
    Bindings.Termbox
  build-depends:
                base >=4.7 && <4.8
              , bindings-DSL >= 1.0.22 && < 1.1

  default-language:    Haskell2010

executable termbox-example
  main-is:
    Example.hs
  ghc-options:
    -threaded
  default-language:
                   Haskell2010
  build-depends:
                base >=4.7 && <4.8
              , bindings-termbox
              , lens
              , containers
              , mtl
              , transformers
